# dataing

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE.md  README.md  justfile  pyproject.toml  railway.json
bond/: pyproject.toml
bond/src/bond/: __init__.py  agent.py  utils.py
bond/src/bond/tools/memory/: __init__.py  _models.py  _protocols.py  backends.py  tools.py
bond/src/bond/tools/memory/backends/: __init__.py  pgvector.py  qdrant.py
bond/tests/: __init__.py
bond/tests/unit/tools/memory/: test_backends.py  test_models.py
dataing/: LICENSE.md  Procfile  app.py  openapi.json  pyproject.toml  railway.json
dataing-ee/: LICENSE.md  pyproject.toml
dataing-ee/k8s/cronjobs/: audit-cleanup.yaml
dataing-ee/src/dataing_ee/: __init__.py
dataing-ee/src/dataing_ee/adapters/audit/: __init__.py  decorator.py  repository.py
dataing-ee/src/dataing_ee/adapters/datasource/api/: salesforce.py  stripe.py
dataing-ee/src/dataing_ee/adapters/sso/: __init__.py  group_repository.py  repository.py
dataing-ee/src/dataing_ee/core/scim/: __init__.py
dataing-ee/src/dataing_ee/core/sso/: __init__.py
dataing-ee/src/dataing_ee/entrypoints/api/: app.py
dataing-ee/src/dataing_ee/entrypoints/api/middleware/: audit.py
dataing-ee/src/dataing_ee/entrypoints/api/routes/: audit.py  scim.py  settings.py  sso.py
dataing-ee/src/dataing_ee/jobs/: audit_cleanup.py
dataing-ee/src/dataing_ee/models/: audit_log.py
dataing-ee/tests/: conftest.py
dataing-ee/tests/integration/api/: test_audit_logging.py
dataing-ee/tests/unit/adapters/audit/: __init__.py  test_decorator.py  test_repository.py  test_types.py
dataing-ee/tests/unit/adapters/sso/: test_group_repository.py  test_oidc_provider.py  test_repository.py  test_scim_repository.py  test_user_repository.py
dataing-ee/tests/unit/core/scim/: __init__.py  test_schemas.py
dataing-ee/tests/unit/core/sso/: test_dns_verification.py  test_types.py
dataing-ee/tests/unit/entrypoints/api/middleware/: test_audit.py
dataing-ee/tests/unit/entrypoints/api/routes/: test_audit.py  test_scim.py  test_sso.py
dataing/migrations/: 001_initial.sql  004_schema_comments.sql  005_knowledge_comments.sql  008_seed_demo_auth.sql  010_audit_logs.sql  011_rl_training_signals.sql  012_agent_memories.sql
dataing/scripts/: migrate-prod.sh
dataing/src/dataing/adapters/: __init__.py
dataing/src/dataing/adapters/audit/: __init__.py
dataing/src/dataing/adapters/auth/: postgres.py  recovery_email.py
dataing/src/dataing/adapters/comments/: __init__.py
dataing/src/dataing/adapters/context/: correlation_context.py  query_context.py
dataing/src/dataing/adapters/datasource/: __init__.py  base.py  errors.py  registry.py  type_mapping.py  types.py
dataing/src/dataing/adapters/datasource/api/: __init__.py
dataing/src/dataing/adapters/datasource/document/: __init__.py  base.py  cassandra.py  mongodb.py
dataing/src/dataing/adapters/datasource/filesystem/: hdfs.py
dataing/src/dataing/adapters/datasource/sql/: __init__.py  base.py  postgres.py  snowflake.py  sqlite.py
dataing/src/dataing/adapters/db/: app_db.py  mock.py
dataing/src/dataing/adapters/entitlements/: database.py  opencore.py
dataing/src/dataing/adapters/investigation_feedback/: types.py
dataing/src/dataing/adapters/lineage/: exceptions.py  graph.py  protocols.py
dataing/src/dataing/adapters/lineage/adapters/: __init__.py  composite.py  dbt.py  static_sql.py  (+1 more)
dataing/src/dataing/adapters/llm/: __init__.py  client.py
dataing/src/dataing/adapters/notifications/: webhook.py
dataing/src/dataing/adapters/rbac/: __init__.py  permissions_repository.py
dataing/src/dataing/adapters/training/: __init__.py  repository.py
dataing/src/dataing/agents/: __init__.py  client.py  models.py
dataing/src/dataing/agents/prompts/: __init__.py  hypothesis.py  interpretation.py  protocol.py  query.py  reflexion.py  synthesis.py
dataing/src/dataing/core/: __init__.py  domain_types.py  exceptions.py  interfaces.py  orchestrator.py
dataing/src/dataing/core/auth/: jwt.py  password.py  recovery.py  service.py
dataing/src/dataing/core/entitlements/: __init__.py  config.py
dataing/src/dataing/core/quality/: assessment.py  judge.py  protocol.py
dataing/src/dataing/core/rbac/: types.py
dataing/src/dataing/demo/: __init__.py  seed.py
dataing/src/dataing/entrypoints/api/: app.py  deps.py
dataing/src/dataing/entrypoints/mcp/: __init__.py  server.py
dataing/src/dataing/models/: __init__.py  user.py
dataing/src/dataing/safety/: circuit_breaker.py  validator.py
dataing/src/dataing/services/: __init__.py  auth.py  notification.py  tenant.py  usage.py
dataing/tests/: conftest.py
dataing/tests/e2e/: test_api_e2e.py  test_mcp_e2e.py
dataing/tests/fixtures/: data_sources.py  mocks.py
dataing/tests/integration/: test_quality_validation.py
dataing/tests/integration/adapters/comments/: __init__.py
dataing/tests/integration/adapters/investigation_feedback/: test_feedback_integration.py
dataing/tests/unit/adapters/context/: __init__.py  test_engine.py  test_lineage.py
dataing/tests/unit/adapters/datasource/: __init__.py  test_base.py  test_contracts.py  test_document_base.py  test_registry.py  test_sql_base.py
dataing/tests/unit/adapters/db/: test_app_db.py  test_mock.py
dataing/tests/unit/adapters/lineage/: __init__.py  test_types.py
dataing/tests/unit/adapters/notifications/: __init__.py  test_email.py
dataing/tests/unit/adapters/training/: test_repository.py
dataing/tests/unit/agents/: test_models.py
dataing/tests/unit/core/: test_domain_types.py  test_exceptions.py  test_orchestrator.py  test_orchestrator_feedback.py
dataing/tests/unit/core/auth/: test_password.py
dataing/tests/unit/core/quality/: __init__.py  test_judge.py
dataing/tests/unit/entrypoints/mcp/: test_server.py
dataing/tests/unit/models/: test_investigation.py  test_models.py
dataing/tests/unit/safety/: test_circuit_breaker.py  test_pii.py  test_validator.py
dataing/tests/unit/services/: test_auth.py  test_notification.py
(+1005 files in other folders)
