[project]
name = "dataing"
version = "2.0.0"
description = "Autonomous Data Quality Investigation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dataing team" }]
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "sqlalchemy>=2.0.0",
    "sqlglot>=20.0.0",
    "anthropic>=0.18.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "asyncpg>=0.29.0",
    "trino>=0.327.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "mcp>=1.0.0",
    "duckdb>=0.9.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "testcontainers>=3.7.0",
    "respx>=0.20.2",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
]
demo = [
    "polars>=0.20.0",
    "faker>=22.0.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/dataing"]

[tool.mypy]
python_version = "3.11"
files = ["backend/src/dataing"]
# Strict mode flags (equivalent to --strict but with SQLAlchemy-compatible settings)
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
# SQLAlchemy requires allowing subclassing from DeclarativeBase (typed as Any)
disallow_subclassing_any = false
disallow_any_generics = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["dataing.models", "dataing.models.*"]
# SQLAlchemy models need relaxed generic constraints for JSONB columns
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "dataing.entrypoints.mcp.*",
    "dataing.entrypoints.mcp.server",
    "*.entrypoints.mcp.server",
    "*.mcp.server",
]
# MCP library decorators don't have type stubs
disallow_untyped_decorators = false
disallow_untyped_calls = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=backend/src/dataing --cov-report=term-missing"
