[project]
name = "bond"
version = "0.0.1"
description = "Generic agent runtime - a skilled agent that gets things done"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dataing team" }]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-ai>=0.0.14",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bond"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
