[project]
name = "dataing-ee"
version = "2.0.0"
description = "Autonomous Data Quality Investigation - Enterprise Edition"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "dataing team" }]
dependencies = [
    "dataing>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataing_ee"]
