[project]
name = "dataing"
version = "0.0.1"
description = "Autonomous Data Quality Investigation - Community Edition"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "dataing team" }]
dependencies = [
    "bond",
    "fastapi[standard]>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-ai>=0.0.14",
    "sqlalchemy>=2.0.0",
    "sqlglot>=20.0.0",
    "anthropic>=0.18.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "asyncpg>=0.29.0",
    "trino>=0.327.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "mcp>=1.0.0",
    "duckdb>=0.9.0",
    "cryptography>=41.0.0",
    "polars>=1.36.1",
    "faker>=40.1.0",
    "bcrypt>=5.0.0",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "testcontainers>=3.7.0",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataing"]

[tool.uv.sources]
bond = { path = "../bond", editable = true }
